--- a/wp-content/themes/carnes-crossroads-2015/scss/_page-templates.scss
+++ b/wp-content/themes/carnes-crossroads-2015/scss/_page-templates.scss
@@ -497,13 +497,13 @@ $navbar-offset: 145px;
             line-height: 1.2;
         }
 
-        &-cat a {
+        &-cat {
             color: $cc-brown;
-            opacity: 0.6;
+            opacity: 0.7;
             text-decoration: none;
             font-style: italic;
 
-            &:hover {
+            a:hover {
                 opacity: 1;
                 text-decoration: underline !important;
             }
